--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         <div class="contacto">
             <h3>Contacto</h3>
             Me puedes contactar en:
-            <ul>
-
-            </ul>
+            
+            Hola 
         </div>
 
 
