--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a956ef5c69.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,10 +21,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=""> Sobre Mi </a></li>
-                    <li><a href=""> Apuntes </a></li>
-                    <li><a href=""> Mi Aprendizaje</a></li>
-                    <li><a href=""> Contacto </a></li>
+                    <li class="li_nav"><a href=""> Sobre Mi </a></li>
+                    <li class="li_nav"><a href=""> Apuntes </a></li>
+                    <li class="li_nav"><a href=""> Mi Aprendizaje</a></li>
+                    <li class="li_nav"><a href=""> Contacto </a></li>
 
                 </ul>
             </nav>
@@ -59,7 +60,10 @@
         <div class="contacto">
             <h3>Contacto</h3>
             Me puedes contactar en:
-            <p>hOLA</p>
+            <ul  class= "lista_contacto">
+                <li class="li_contacto"><i class="fab fa-linkedin"></i> <a class = "social" href="#">Linkedin</a></li>
+                <li class="li_contacto"><i class="fab fa-twitter-square"></i> <a  class = "social" href="#">Twitter</a></li>
+            </ul>
             
         </div>
 
